# PyTools

./: .gitignore  Dockerfile  README.md  build.sh  main.py  pyproject.toml  pytools.service  run.sh  runner.sh  source-env.sh
.devcontainer/: Containerfile  Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: main.yml
app/: app.py  database.db  form.py  main.py
app/app/: app.py
app/app/models/: tools.py
app/app/routes/: auth.py  tools.py  upload.py
app/app/templates/: index.html  login_button.html  logout_button.html  privacy_policy.html  terms_of_service.html  tool.html  upload.html
app/app/utility/: render.py  (+1 more)
app/converters/: Upper_Case_Text_File.py  add_two_numbers.json  add_two_numbers.py  container_with_lid.py  dictionary_return.py  download_test.py  image_to_grayscale.json  image_to_grayscale.py  size_of_file.py  video_to_audio.json  video_to_audio.py
app/routes/: auth.py  tools.py
app/scripts/: drop-area.js
app/static/: converter.css  index.css  tool.css
app/templates/: converter.html  index.html  privacy_policy.html  terms_of_service.html  tool.html
app/tools/: audio_to_audio.py  container_with_lid.py  image_to_grayscale.py  pdf_to_text.py  video_to_audio.py
app/utility/: convert.py  render.py  sandbox.py
containers/: Containerfile.dev
converters/: Upper_Case_Text_File.json  image_to_grayscale.py
development/: container_with_lid.stl  runner.py
docker/: Dockerfile.dev  Dockerfile.prod
docs/: system_diagram.excalidraw
files/: requirements.txt  runner.py
sandbox/: Dockerfile  app.yaml  app_requirements.txt  env.yaml  printly.py  pyproject.toml  runner.py  sandbox.yaml  sandbox_requirements.txt
sandbox/sandbox/: runner.py  serializer.py
sandbox/src/: serializer.py
server/: MANIFEST.in  pyproject.toml
server/src/app/: runner.py
server/src/app/models/: tools.py
server/src/app/routes/: upload.py  user.py
server/src/app/static/: styles.css
server/src/app/utility/: render.py  sandbox.py
server/src/app/webapp/scripts/three/addons/controls/: OrbitControls.js
server/src/app/webapp/static/: output.css  styles.css
server/src/app/webapp/templates/components/: head.html  upload_tool_item.html
server/src/app/webapp/templates/pages/: index.html  tool.html
services/: env-setup.sh  mount-share.service  nginx.conf  nginx.service  pytools.service  server.service
src/: main.py
src/app/: __init__.py  app.py
static/: index.css
tailwind/: tailwind.config.js
test/: manual_submit.py  test_file.txt
tools/: async_tool_test.py  byte_converter.py  container_with_lid.py  container_with_lid_sweep.py  electronic_stand.py  error_tool_test.py  lower_case_text.py  pdf_to_text.py  sha256.py  video_to_video.py
(+49 files in other folders)
