[project]
name = "sandbox"
version = "0.1.0"
description = "sandbox utiltiies and dependencies"
requires-python = ">=3.10"
dependencies = [
    "cadquery>=2.5.2",
    "ezdxf>=1.3.4",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pyav>=14.2.1",
    "pydantic>=2.11.3",
    "pymupdf>=1.25.5",
    "pyparsing>=3.2.3",
    "requests>=2.32.3",
    "scipy>=1.15.2",
]

[project.scripts]
sandbox = "sandbox.runner:main"
