[project]
name = "pytools"
version = "0.1.0"
description = "Python script execution web wrapper."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "itsdangerous>=2.2.0",
    "jwt>=1.3.1",
    "nh3>=0.2.21",
    "profanityfilter>=2.1.0",
    "pyparsing>=3.2.3",
    "requests>=2.32.3",
    "sqlmodel>=0.0.24",
]

[tool.ruff]
line-length = 120

[project.scripts]
pywebtool = "app.runner:runner"